--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,10 +1,10 @@
 #Minecraft server properties
-#Thu Jun 27 16:31:49 UTC 2024
+#Thu Jun 27 21:24:03 UTC 2024
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
-difficulty=easy
+difficulty=hard
 enable-command-block=false
 enable-jmx-monitoring=false
 enable-query=false
@@ -31,7 +31,7 @@ max-tick-time=60000
 max-world-size=29999984
 motd=A Minecraft Server
 network-compression-threshold=256
-online-mode=true
+online-mode=false
 op-permission-level=4
 player-idle-timeout=0
 prevent-proxy-connections=false
@@ -50,7 +50,7 @@ simulation-distance=10
 spawn-animals=true
 spawn-monsters=true
 spawn-npcs=true
-spawn-protection=16
+spawn-protection=0
 sync-chunk-writes=true
 text-filtering-config=
 use-native-transport=true
